# meela-assignments

./: README.md
backend/: .env  .gitignore  Cargo.toml  README.md
backend/src/: api.rs  main.rs  model.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: Home.jsx  IntakeForm.jsx
frontend/src/styles/: theme.css
